logs/doqu.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/doqu'...
Compiling './lib/python3.5/site-packages/doqu/document_base_new.py'...
***   File "./lib/python3.5/site-packages/doqu/document_base_new.py", line 53
    print self, 'save()'
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/doqu/ext'...
Listing './lib/python3.5/site-packages/doqu/ext/fields'...
Listing './lib/python3.5/site-packages/doqu/ext/mongodb'...
Listing './lib/python3.5/site-packages/doqu/ext/shelve_db'...
Listing './lib/python3.5/site-packages/doqu/ext/shove_db'...
Listing './lib/python3.5/site-packages/doqu/ext/tokyo_cabinet'...
Listing './lib/python3.5/site-packages/doqu/ext/tokyo_tyrant'...
Listing './lib/python3.5/site-packages/doqu/utils'...
Listing './lib/python3.5/site-packages/doqu/validation'...
Compiling './lib/python3.5/site-packages/doqu/validators.py'...
***   File "./lib/python3.5/site-packages/doqu/validators.py", line 330
    tld_part = (require_tld and ur'\.[a-z]{2,10}' or u'')
                                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/doqu-0.28.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
